--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,2 +1,7 @@
-<p>home works!</p>
-<app-statistics></app-statistics>
+<div class="title-container">
+  <h1 class="title">Home</h1>
+</div>
+<div class="home-container">
+  <p>home works!</p>
+  <app-statistics></app-statistics>
+</div>
