--- a/src/app/pages/payment-orders/payment-orders.component.html
+++ b/src/app/pages/payment-orders/payment-orders.component.html
@@ -1,5 +1,5 @@
 <div class="title-container">
-  <h1 class="title">User Management</h1>
+  <h1 class="title">Payment Orders</h1>
 </div>
 <div class="order-container">
   <p>payment-orders works!</p>
