--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,7 @@
   <h1 class="title">Home</h1>
 </div>
 <div class="home-container">
-  <p>home works!</p>
+  <h2>Welcome back, Admin!</h2>
+  <p>Here's a quick overview of your orders and users.</p>
   <app-statistics></app-statistics>
 </div>
