--- a/src/app/pages/errors/not-found/not-found.component.html
+++ b/src/app/pages/errors/not-found/not-found.component.html
@@ -1,1 +1,10 @@
-<p>not-found works!</p>
+<div class="container">
+  <div class="error-container">
+    <i class="pi pi-exclamation-triangle"></i>
+    <h1>404 - Not Found</h1>
+    <p>Oops, it looks like the page you're looking for doesn't exist.</p>
+    <div>
+      <a routerLink="/home" class="p-button font-bold">Go to Homepage</a>
+    </div>
+  </div>
+</div>
