--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,6 @@
 </div>
 <div class="home-container">
   <h2>Welcome back, Admin!</h2>
-  <p>Here's a quick overview of your orders and users.</p>
+  <p>Here's a quick overview of your orders and users in the last 30 days.</p>
   <app-statistics></app-statistics>
 </div>
