--- a/src/app/pages/errors/unauthorized/unauthorized.component.html
+++ b/src/app/pages/errors/unauthorized/unauthorized.component.html
@@ -1,1 +1,10 @@
-<p>unauthorized works!</p>
+<div class="container">
+  <div class="unauthorized-container">
+    <i class="pi pi-exclamation-triangle"></i>
+    <h1>401 - Unauthorized</h1>
+    <p>You are not authorized to access this page.</p>
+    <div>
+      <a routerLink="/login" class="p-button font-bold">Login</a>
+    </div>
+  </div>
+</div>
