optimization for isLoggedIn functionality on sidebar button, token interceptor

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -31,7 +31,7 @@
       <i class="pi pi-users"></i>
       <span>Users</span></a
     >
-    @if (!(isLoggedIn | async)) {
+    @if (!(isLoggedIn)) {
     <button pButton routerLink="/login">
       <div class="btn">Login</div>
     </button>
